[package]
name = "hopper_rust"
description = "Hopper hexapod robot"
version = "0.2.5"
authors = ["David Weis <davidmichaelweis@gmail.com>"]
edition = "2021"
publish = false
readme = "README.md"
license = "MIT OR APACHE"
repository = "https://github.com/dmweis/hopper_rust"
default-run = "hopper"

[package.metadata.deb]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"
conf-files = ["/etc/home_speak/settings.yaml"]
assets = [
    [
        "target/release/hopper",
        "/usr/bin/",
        "755",
    ],
    [
        "config/settings.yaml",
        "/etc/hopper/settings.yaml",
        "644",
    ],
]

[package.metadata.deb.systemd-units]


[[bin]]
name = "hopper"

[[bin]]
name = "visualizer"
required-features = ["visualizer"]

[[bin]]
name = "remote_controller"
required-features = ["visualizer"]

[features]
default = ["visualizer"]
visualizer = ["kiss3d", "gilrs"]

[dependencies]
dynamixel-driver = { branch = "main", git = "https://github.com/dmweis/dynamixel-driver" }
hopper_face = { branch = "main", git = "https://github.com/dmweis/hopper_face" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
clap = "3.2"
simplelog = "0.12"
log = "0.4"
mint = "0.5"
nalgebra = { version = "0.30", features = ["serde-serialize"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.6", features = [
    "macros",
    "rt-multi-thread",
    "time",
], default-features = false }
async-trait = "0.1"
lazy_static = "1.4"
bitflags = "1.2"
last-message-channel = { branch = "main", git = "https://github.com/dmweis/last-message-channel" }
rand = "0.8"
ctrlc = "3.1"
warp = "0.3"
kiss3d = { optional = true, version = "0.35" }
gilrs = { version = "0.9", optional = true }
rplidar_driver = { git = "https://github.com/dmweis/rplidar_driver", branch = "main" }
azure_tts = { git = "https://github.com/dmweis/azure_tts", branch = "main" }
# fix weird bug with mp3 not playing from start
# rodio = "0.15"
rodio = { git = "https://github.com/RustAudio/rodio", rev = "55d957f8b40c59fccea4162c4b03f6dd87a7a4d9" }
sha2 = "0.10"
config = "0.13.2"

[dev-dependencies]
approx = "0.5.1"
