[package]
authors = ["David Weis <davidmichaelweis@gmail.com>"]
default-run = "hopper"
description = "Hopper hexapod robot"
edition = "2021"
license = "MIT OR APACHE"
name = "hopper_rust"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/hopper_rust"
version = "0.2.9"

[package.metadata.deb]
assets = [
  [
    "target/release/hopper",
    "/usr/bin/",
    "755",
  ],
  [
    "config/settings.yaml",
    "/etc/hopper/settings.yaml",
    "644",
  ],
]
conf-files = ["/etc/home_speak/settings.yaml"]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]

[[bin]]
name = "hopper"

[[bin]]
name = "visualizer"
required-features = ["visualizer"]

[[bin]]
name = "remote_controller"
required-features = ["visualizer"]

[features]
audio = ["rodio", "azure_tts"]
default = ["visualizer", "audio"]
visualizer = ["kiss3d", "gilrs"]

[dependencies]

# Utilities
anyhow = "1.0"
async-trait = "0.1"
bitflags = "2.3.3"
clap = {version = "4", features = ["derive"]}
config = "0.13.2"
ctrlc = "3.1"
lazy_static = "1.4"
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

# serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.7.6"

# other projects
azure_tts = {git = "https://github.com/dmweis/azure_tts", branch = "main", optional = true}
dynamixel-driver = {branch = "main", git = "https://github.com/dmweis/dynamixel-driver"}
hopper_face = {branch = "main", git = "https://github.com/dmweis/hopper_face"}
rplidar_driver = {git = "https://github.com/dmweis/rplidar_driver", branch = "main"}

gilrs = {version = "0.10", optional = true}
kiss3d = {optional = true, version = "0.35"}
last-message-channel = {branch = "main", git = "https://github.com/dmweis/last-message-channel"}
mint = "0.5"
nalgebra = {version = "0.30", features = ["serde-serialize"]}
rodio = {git = "https://github.com/RustAudio/rodio", rev = "55d957f8b40c59fccea4162c4b03f6dd87a7a4d9", optional = true}
tokio = {version = "1.6", features = [
  "macros",
  "rt-multi-thread",
  "time",
], default-features = false}
# fix weird bug with mp3 not playing from start
# rodio = "0.15"

# zenoh
zenoh = "0.7.2-rc"
zenoh-config = "0.7.2-rc"

# protobuf
once_cell = "1.17.0"
prost = "0.11.9"
prost-reflect = {version = "0.11.4", features = ["derive"]}
prost-types = "0.11.9"

[build-dependencies]
prost-build = "0.11.9"
prost-reflect-build = "0.11.0"

[dev-dependencies]
approx = "0.5.1"
