[package]
authors = ["David Weis <davidmichaelweis@gmail.com>"]
default-run = "hopper"
description = "Hopper hexapod robot"
edition = "2021"
license = "MIT OR APACHE"
name = "hopper_rust"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/hopper_rust"
version = "0.3.14"

[package.metadata.deb]
assets = [
  [
    "target/release/hopper",
    "/usr/bin/",
    "755",
  ],
  [
    "config/settings.yaml",
    "/etc/hopper/settings.yaml",
    "644",
  ],
]
conf-files = ["/etc/hopper/settings.yaml"]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]

[[bin]]
name = "hopper"

[[bin]]
name = "visualizer"
required-features = ["visualizer"]

[[bin]]
name = "remote_controller"
required-features = ["visualizer"]

[features]
audio = ["rodio", "azure_tts"]
default = ["visualizer", "audio", "gilrs"]
visualizer = ["kiss3d", "gilrs"]

[dependencies]

# Utilities
anyhow = "1.0"
bitflags = "2.3.3"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4", features = ["derive"]}
config = "0.13.2"
ctrlc = "3.1"
lazy_static = "1.4"
rand = "0.8"
sha2 = "0.10"
thiserror = "1.0"
walkdir = "2.3.3"
bytes = "1.4"
reqwest = {version = "0.11", features = ["json"]}

# async
futures = "0.3"
async-trait = "0.1"
tokio = {version = "1.6", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "process",
  "signal",
], default-features = false}

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "env-filter",
  "json",
]}

# serialization
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9.25"
toml = "0.7.6"
schemars = "0.8.12"


# other projects
azure_tts = {git = "https://github.com/dmweis/azure_tts", branch = "main", optional = true}
dynamixel-driver = {branch = "main", git = "https://github.com/dmweis/dynamixel-driver"}
hopper_face = {branch = "main", git = "https://github.com/dmweis/hopper_face"}
rplidar_driver = {git = "https://github.com/dmweis/rplidar_driver", branch = "main"}
async-openai = {version = "0.15"}
v4l = "0.14.0"

gilrs = {version = "0.10", optional = true, features = ["serde-serialize"]}
kiss3d = {optional = true, version = "0.35"}
last-message-channel = {branch = "main", git = "https://github.com/dmweis/last-message-channel"}
mint = "0.5"
nalgebra = {version = "0.30", features = ["serde-serialize"]}

rodio = { version = "0.17",  optional = true}
# fix weird bug with mp3 not playing from start
# rodio = {git = "https://github.com/RustAudio/rodio", rev = "55d957f8b40c59fccea4162c4b03f6dd87a7a4d9", optional = true}


# zenoh
zenoh = "0.7.2-rc"
zenoh-config = "0.7.2-rc"

# protobuf
once_cell = "1.17.0"
prost = "0.11.9"
prost-reflect = {version = "0.11.4", features = ["derive", "serde"]}
prost-types = "0.11.9"

[build-dependencies]
prost-build = "0.11.9"
prost-reflect-build = "0.11.0"

[dev-dependencies]
approx = "0.5.1"
